refactor: 리뷰에 따른 일부 코드 단순화 및 주문번호 초기화 스케줄러를 별도 클래스로 분리